--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "*.cjson": "jsonc",
         "*.wxss": "css",
         "*.wxs": "javascript",
-        "ioctl.h": "c"
+        "ioctl.h": "c",
+        "sfs.h": "c",
+        "newfs.h": "c"
     }
 }
